# vista-meta

./: .env.example  .gitattributes  .gitignore  .m-cli.toml  CLAUDE.md  Makefile  README.md  TODO.md
.claude/: settings.json
.github/workflows/: dev-tools-ci.yml  kids-vc-ci.yml
docker/: Dockerfile  bake.sh  compose.yml  entrypoint.sh  healthcheck.sh
docker/etc/: sshd_config  ydb_env.sh
docs/: build-log.md  code-model-guide.md  dependencies.md  kids-vc-background-dev.md  kids-vc-guide.md  package-situational-awareness.md  piks-analysis-guide.md  routine-situational-awareness.md  vista-developers-guide.md  vista-meta-guide.md  vista-meta-restore.md  vista-meta-spec-v0.4.md  vista-orchestration-plan.md  vista-vscode-guide.md  vscode-extension-internals.md  xindex-reference.md
docs/adr/: 000-index.md  001-project-identity-and-scope.md  002-vehu-flavor.md  003-ubuntu-2404-base.md  004-yottadb-install-method.md  005-ascii-only-no-utf8.md  006-skip-bootstrap.md  007-no-post-install-hook.md  008-tailscale-ip-perimeter.md  009-entrypoint-chowns-bind-mounts.md  010-hybrid-persistence.md  011-image-tag-strategy.md  012-zro-layering.md  013-services-baked.md  014-python-tooling-baked.md  015-m-unit-fork.md  016-dd-exporters.md  017-enhanced-xindex-via-vehu.md  018-xindex-baseline-auto-plus-manual.md  019-interactive-tools.md  (+27 more)
hooks/: pre-commit
kids_vc_pkg/: README.md  pyproject.toml
kids_vc_pkg/src/kids_vc/: __init__.py  _impl.py  cli.py  merge.py
vscode-extension/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json
(+60 files in other folders)
